2007-08-14  John W. Eaton  <jwe@octave.org>

	* Sparse.cc (Sparse<T>::permute): permutation vector is zero based.
	Simplify.

2007-08-10  Michael Goffioul <michael.goffioul@gmail.com>

	* file-stat.cc (file_stat::update_internal) [__WIN32__]:
	Remove trailing dir separator when stat'ing directory except for
	root directory.

2007-07-25  David Bateman  <dbateman@free.fr>
	
	* Makefile.in: 	Adjust DISTFILES to allow out of tree "make dist" 
	to work.

2007-06-04  David Bateman  <dbateman@free.fr>

	* oct-inttypes.h (octave_int<T>& operator <<= (const T2&),
	octave_int<T>& operator >>= (const T2&)): Make shift operators
	perform a twos complement arithmetic shift for both signed and
	unsigned integers regardless of compiler implementations.

2007-06-13  Michael Goffioul  <michael.goffioul@swing.be>

	* SparseCmplxQR.cc (OCTAVE_C99_ZERO): For CXSparse 2.2 and greater
	use cs_complex_t(0,0) for the complex zero.

	* MArray-ch.cc, MArray-d.cc, MArray-i.cc, MArray-s.cc:
	Sprinkle class instantiations with OCTAVE_API as needed.

	* Array.h (INSTANTIATE_ARRAY_ASSIGN, INSTANTIATE_ARRAY,
	INSTANTIATE_ARRAY_AND_ASSIGN): New arg, API. Change all uses.
	* MArray-defs.h (MARRAY_OP_ASSIGN_DECL, MARRAY_OP_ASSIGN_DECLS,
	MARRAY_OP_ASSIGN_FWD_DECLS, MARRAY_OP_ASSIGN_FRIENDS,
	MARRAY_OP_ASSIGN_DEFS, MARRAY_UNOP, MARRAY_UNOP_DECLS,
	MARRAY_UNOP_FWD_DECLS, MARRAY_UNOP_FRIENDS, MARRAY_UNOP_DEFS,
	MARRAY_BINOP_DECL, MARRAY_BINOP_DECLS, MARRAY_AA_BINOP_DECLS,
	MDIAGARRAY2_DAS_BINOP_DECLS, MDIAGARRAY2_SDA_BINOP_DECLS,
	MDIAGARRAY2_DADA_BINOP_DECLS, MARRAY_BINOP_FWD_DECLS,
	MDIAGARRAY2_BINOP_FWD_DECLS, MARRAY_BINOP_FRIENDS,
	MDIAGARRAY2_BINOP_FRIENDS, MARRAY_BINOP_DEFS,
	MDIAGARRAY2_BINOP_DEFS, MARRAY_OPS_FORWARD_DECLS,
	MDIAGARRAY2_OPS_FORWARD_DECLS, MARRAY_OPS_FRIEND_DECLS,
	MDIAGARRAY2_OPS_FRIEND_DECLS, INSTANTIATE_MARRAY_FRIENDS,
	INSTANTIATE_MARRAY2_FRIENDS, INSTANTIATE_MARRAYN_FRIENDS,
	INSTANTIATE_MDIAGARRAY2_FRIENDS): Ditto.